# StatLine

./: .dockerignore  .gitignore  .markdownlintignore  CLA.md  Dockerfile  HOWTO.md  LICENSE  README.md  TRADEMARK_POLICY.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  publish.yml
legal/: TRADEMARK_POLICY.md
scripts/: dev_seed.py  run_cli.py  seed_max_stats.py
statline/: cli.py
statline/core/: cache.py  calculator.py  db.py  guild_manager.py  max_stats.py  models.py  normalization.py  scoring.py  setup_service.py  sheets_sync.py  weights.py
statline/core/adapters/: __init__.py  compile.py  example.yaml  hooks.py  loader.py  registry.py  types.py
statline/core/adapters/defs/: example.yaml  legacy.yaml  rbw5.yaml  valorant.yaml
statline/data/migrations/: 001_init.sql  002_add_indexes.sql  003_triggers.sql
statline/data/stats/: rbw5_demo.csv
statline/io/: cli.py  embeds.py  persistence.py  sheets.py  sheets_sync.py
statline/orion/: app.py
statline/utils/: config.py  logging.py  paths.py  timing.py
tests/: test_scoring.py
