[project]
name = "statline"
version = "0.1.0"
requires-python = ">=3.10,<3.14"
dependencies = [
  "typer>=0.12",
  "pyyaml>=6",
  'typing-extensions>=4.7; python_version < "3.11"',
]

[project.optional-dependencies]
sheets = ["gspread>=6.0.0", "google-auth>=2.0.0"]
dev = [
  "pytest>=8.1",
  "pytest-cov>=4.1",
  "ruff>=0.5",
  "mypy>=1.11",           # 3.13-friendly
  "coverage>=7.5",
  "hypothesis>=6.100",
  "types-PyYAML",
]

cli-pretty = ["rich>=13.0"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
pretty = true
# (or keep your current block if you prefer non-strict locally)

[tool.hatch.build.targets.wheel]
packages = ["statline"]
include = [
  "statline/py.typed",
  "statline/**/*.yaml",
  "statline/**/*.yml",
  "statline/**/*.json",
  "statline/**/*.sql",
  # keep any explicit includes you rely on:
  "statline/data/**/*",
  "statline/core/adapters/defs/*",
  "statline/data/migrations/*.sql",
]

[tool.hatch.build.targets.sdist]
include = ["statline", "tests", "README.md", "LICENSE", "pyproject.toml"]
